# habr_manim

./: .pre-commit-config.yaml  README.md  config.py  main.py  pylama.ini  pyproject.toml  scenario.py
classes/: __init__.py  funnel.py  funnels.py  graph.py  hist_and_funnel.py  histogram_dot.py  histogram_text.py  movable_funnel.py  movable_graph.py  scenario.py  shape_point.py  table.py
media/videos/main/480p15/partial_movie_files/MainScene/: partial_movie_file_list.txt
tests/: test_habr_manim.py
