[tool.poetry]
name = "habr_manim"
version = "0.1.0"
description = ""
authors = ["Konstantin Mokhov <Konstantin_Mokhov@epam.com>"]
packages = [
    { include = "classes" }
]

[tool.poetry.dependencies]
python = "^3.7"
manimlib = "^0.2.0"
numpy = "^1.20.3"
pre-commit = "^2.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Lint configuration
[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120
profile = "black"
